demos/explicit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
    app-name: app
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
